# pandas-auth

./: Cargo.toml  Dockerfile.auth  Dockerfile.db  LICENSE.txt  Makefile  docker-compose.yml  init-db.sh
migrations/2019-09-27-201014_create_users/: up.sql
src/: error.rs  hash.rs  main.rs  models.rs  resource.rs  schema.rs  secret.rs
src/resource/: login.rs  mod.rs  register.rs
