[package]
name = "pandas-auth"
version = "0.1.0"
authors = ["Cormac O'Brien <cormac@c-obrien.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.1"
actix-web = "1.0"
argon2rs = "0.2.5"
base64 = "0.10"
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.14"
env_logger = "0.7"
lazy_static = "1.4"
log = "0.4"
ring = "0.14"
serde = "1.0"
serde_json = "1.0"